--- a/Task_2/style.css
+++ b/Task_2/style.css
@@ -1,6 +1,7 @@
 @media (max-width: 992px) {
   body {
     flex-direction: column; 
+    height: auto;
   }
 
   .left-section, .right-section {
@@ -146,4 +147,5 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background: gainsboro;
 }
+
 
